--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "main": "index.js",
   "scripts": {
     "prepublish": "npm run compile",
-    "compile": "gulp distribute"
+    "compile": "gulp distribute",
+    "test": "gulp distribute && mocha tests"
   },
   "devDependencies": {
     "babel-plugin-transform-flow-strip-types": "^6.14.0",
     "babel-preset-es2015-node6": "^0.3.0",
     "gulp": "~3.9.1",
     "gulp-babel": "^6.1.2",
-    "gulp-sourcemaps": "~1.9.1"
+    "gulp-sourcemaps": "~1.9.1",
+    "mocha": "^3.2.0"
   }
 }
