--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,17 @@
 {
     "plugins": [
-        "transform-flow-strip-types"
+        "@babel/plugin-transform-flow-strip-types",
+        "@babel/plugin-proposal-object-rest-spread",
+        "@babel/plugin-proposal-class-properties"
     ],
     "presets": [
-        "es2015-node6"
+        [
+            "@babel/preset-env",
+            {
+                "targets": {
+                    "node": true
+                }
+            }
+        ]
     ]
 }
