--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
   "bugs": {
     "url": "https://gitlab.com/tramwayjs/tramway-core/issues?label_name%5B%5D=bug"
   },
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "prepublish": "npm run compile",
-    "compile": "gulp distribute",
-    "test": "gulp distribute && mocha tests"
+    "prepublish": "npm run build",
+    "build": "tramway build",
+    "test": "tramway build && mocha tests"
   },
   "devDependencies": {
-    "babel-plugin-transform-flow-strip-types": "^6.14.0",
-    "babel-preset-es2015-node6": "^0.3.0",
-    "gulp": "~3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-sourcemaps": "~1.9.1",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "@babel/plugin-transform-flow-strip-types": "^7.6.3",
+    "@babel/preset-env": "^7.6.3",
     "mocha": "^3.2.0",
+    "tramway": "^0.5.1",
     "tramway-core-testsuite": "^1.2.0"
   }
 }
