--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tramway/core",
+  "name": "@tramwayjs/core",
   "version": "3.0.0",
   "description": "A simple framework extension to an Express application offering a variety of common abstractions",
   "author": "Julian Wolfe",
@@ -18,7 +18,7 @@
     "test": "tramway build && mocha tests"
   },
   "peerDependencies": {
-    "@tramway/dependency-injector": "^2.0.0"
+    "@tramwayjs/dependency-injector": "^2.0.0-beta.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.5.5",
