--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tramwayjs/core",
-  "version": "3.0.0",
+  "version": "3.0.0-beta.0",
   "description": "A simple framework extension to an Express application offering a variety of common abstractions",
   "author": "Julian Wolfe",
   "license": "MIT",
